--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io-client": "^2.4.0",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.35.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
